--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,6 @@
   },
   "scripts": {
     "start": "npm run start-dev",
-    "test": "npm run start-model-test",
     "start-dev": "webpack serve --config=configs/webpack/dev.js",
     "build": "npm run clean-dist && webpack --config=configs/webpack/prod.js && mv dist/*.wasm dist/js",
     "clean-dist": "rimraf dist/*",
@@ -39,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
+    "@babel/eslint-parser": "^7.21.3",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
