--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ front/.DS_Store
 front/node_modules
 front/build
 front/model
+front/model/sam_vit_h_4b8939.prompt-mask-quantized.onnx
 
 front/.env.local
 front/.env.development.local
